--- a/e-assistant/src/index.html
+++ b/e-assistant/src/index.html
@@ -1,36 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>e-Assistant</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="../node_modules/jquery/dist/jquery.js"></script>  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>  
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <script>
-    function changeTabSumm(){
-      document.getElementById("tabDoc").setAttribute("class", "nav-link")
-      document.getElementById("tabSummary").setAttribute("class", "nav-link active")
-      document.getElementById("doc1Summary").style.display = "flex";
-      document.getElementById("doc1Doc").style.display = "none";
-    }
-    function changeTabDoc(){
-      document.getElementById("tabSummary").setAttribute("class", "nav-link")
-      document.getElementById("tabDoc").setAttribute("class", "nav-link active")
-      document.getElementById("doc1Summary").style.display = "none";
-      document.getElementById("doc1Doc").style.display = "flex";
-    }
-    function displayDoc(){
-      document.getElementById("doc1").style.display = "flex";
-      document.getElementById("doc1Summary").style.display = "flex";
-    }
-  </script>
-</head>
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>e-Assistant</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      function changeTabSumm() {
+        document.getElementById("tabDoc").setAttribute("class", "nav-link");
+        document
+          .getElementById("tabSummary")
+          .setAttribute("class", "nav-link active");
+        document.getElementById("doc1Summary").style.display = "block";
+        document.getElementById("doc1Doc").style.display = "none";
+      }
+      function changeTabDoc() {
+        document.getElementById("tabSummary").setAttribute("class", "nav-link");
+        document
+          .getElementById("tabDoc")
+          .setAttribute("class", "nav-link active");
+        document.getElementById("doc1Summary").style.display = "none";
+        document.getElementById("doc1Doc").style.display = "block";
+      }
+      function displayDoc() {
+        document.getElementById("doc1").style.display = "flex";
+        document.getElementById("doc1Summary").style.display = "block";
+      }
+    </script>
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
 </html>
