removing doc when sigging and added refresh request

--- a/e-assistant/src/index.html
+++ b/e-assistant/src/index.html
@@ -124,6 +124,24 @@
           .getElementById("tabSummary3")
           .setAttribute("class", "nav-link active");
       }
+      function signDoc1() {
+        document.getElementById("doc1Summary").style.display = "none";
+        document.getElementById("doc1Doc").style.display = "none";
+        document.getElementById("doc1").style.display = "none";
+        document.getElementById("row1").remove();
+      }
+      function signDoc2() {
+        document.getElementById("doc2Summary").style.display = "none";
+        document.getElementById("doc2Doc").style.display = "none";
+        document.getElementById("doc2").style.display = "none";
+        document.getElementById("row2").remove();
+      }
+      function signDoc3() {
+        document.getElementById("doc3Summary").style.display = "none";
+        document.getElementById("doc3Doc").style.display = "none";
+        document.getElementById("doc3").style.display = "none";
+        document.getElementById("row3").remove();
+      }
     </script>
   </head>
   <body class="mat-typography">
